--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="container text-center">
         <h3>Welcome to your one stop pet shop</h3>
         <p>We cover everything your furry friend's needs from baths
-        and nail clipping to amazing accessories at an affordable
-        price. It's all here at Bow Wow Pet Stop. Visit us today
+        and nail clipping to amazing accessories at affordable
+        prices. It's all here at Bow Wow Pet Stop. Visit us today
         and taste this magical world of fur and paws.</p>
     </div>
 </div>
