--- a/gallery.html
+++ b/gallery.html
@@ -15,11 +15,11 @@
 <body>
 <nav>
     <ul >
-        <li><a class="act" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">GAllERY</a></li>
+        <li><a class="act" href="gallery.html">GALLERY</a></li>
     </ul>
 </nav>
 <div id="demo" class="carousel slide" data-ride="carousel">
